# OPTICS-Clustering

./: .gitignore  .travis.yml  Benchmark.txt  CMakeLists.txt  Clusters2d.ppm  LICENSE  Neues Textdokument.txt  README.md  ReachabilityPlot.ppm  before_install.sh  benchmark.csv  chi_cluster_img.ppm  cluster_indicator.ppm  install.sh  tmp.ppm
include/optics/: Stopwatch.hpp  Tree.hpp  bgr_image.hpp  bitmap_image.hpp  bitmaps.hpp  kdTree.hpp  nanoflann.hpp  optics.h  optics.hpp  tree.hpp
include/optics/Geometry/: geometry.h
test/: CMakeLists.txt  cluster_indicator.ppm  compile.sh  compile_and_run.sh  main.cpp  reachability_test.cpp  test_main.cpp  tmp.ppm
test/Benchmark/: .~lock.Benchmark.ods#  Benchmark.ods  benchmark.cpp  compile.sh
test/ClusterImage_Test/: compile_and_run.sh  test_ClusterImages.cpp
test/Opencv_ClusterImage_Test/: compile.sh  test_ClusterImage.cpp  test_ClusterImages.cpp
